# AlterImaginer

./: .gitignore  ENV_SETUP_UV_GIT_JA.txt  HOWTO.md  README_UV.md  REDOME.md  pyproject.toml
artifacts/: config.json  metrics.json
collector_app/: app.py  dpg_app.py
infer_app/: app.py
retouch_engine/: README.md  __init__.py  __init__.pyi  color.py  config.py  engine.py  io.py  pyproject.toml  setup.cfg
trainer/: dataset.py  model.py  train.py
