[project]
name = "alter-imagineer"
version = "0.1.0"
description = "Retouch parameter regression MVP: collector, trainer, infer app"
readme = "REDOME.md"
requires-python = ">=3.10"
dependencies = [
    "retouch_engine",
    "numpy",
    "Pillow",
    "pillow-heif",
    "dearpygui",
    "streamlit",
    "torch",
    "torchvision",
    "pandas",
]

[tool.uv.sources]
# ※ uv は「プロジェクトルート外」の path を正しく扱えないため、
# 必ず retouch_engine と同じ階層（RJP_2025）で uv を実行してください。
retouch_engine = { path = "retouch_engine", editable = true }
